--- a/photos.html
+++ b/photos.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-default navbar-fixed-top top-nav nav_links">
+      <nav class="navbar navbar-default navbar-fixed-top top-nav nav_links .navbar-toggleable-*">
         <div class="container">
           <a class="navbar-brand brand" href="index.html">SLAUGHTER FITNESS</a>
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="sr-only">Toggle Navbar</span>
