--- a/photos.html
+++ b/photos.html
@@ -72,7 +72,7 @@
     </footer>
     <main>
     <footer>
-    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
