--- a/index.html
+++ b/index.html
@@ -45,12 +45,36 @@
             <h3>What is Your Why</h3>
             <p>Finding Your Purpose</p>
           </button>-->
+            <h3>The Math Behind Weight Loss</h3>
+            <h4>Weight Management 101</h4>
+            <p>Ever heard of calorie counting? Do you understand why it’s important? Calorie counting is not sexy but unfortunately it’s an essential part of weight management. So why should we count calories? The answer is simple. To lose a pound of weight you must have a 3500-calorie deficit, and conversely, to gain a pound of weight you must have a 3500-calorie surplus. Tracking calories can help you understand if you can expect to gain or lose weight.</p>
+            <p>Trying to lose weight blindly may have you underestimating the amount of calories you are eating. If you underestimate your caloric intake the scale might not budge despite all the effort you are putting in at the gym. One of the wisest quotes I have ever heard in this regard is, “You can not out train a bad diet.”  A simple example of this is, you can eat a 400 calorie snack, beverage, coffee (whatever your vice is) in about 5 minutes but for a 120 lb. person it can take a whole hour of cardio to burn it back off. My point being, loading up on calories is a much easier and quicker process than burning them.</p>
+
+            <p>So lets see some examples!</p>
+
+            <p>Example 1: Sonya wants to lose 2 lbs. a week so that she is hot and sexy for the summer. She decides to hit the gym and hit it hard. However, after a month she has only lost half a pound. She is a little discouraged but still determined. She regroups and decides she is just going to hit the gym harder and after another month she has lost only one additional pound. After two months of frustration she gives up, convinced she just cant lose weight.</p>
+
+            <p>Example 2: Terry, a friend of Sonya, also decides she wants to lose 2 lbs. a week. So she gets out her food journal, and calculator and then starts to write up a meal plan. If she wants to lost 2 lbs. a week that means she must be at a deficit of 7000 calories a week (3500 x 2) and 1000 calories a day (7000 / 7). She plans to burn 2200 calories a day and this means she can only consume 1200 calories to hit her deficit. That number frightens her but she is motivated to do what is necessary and plans her meals in such a way that she stays very near her 1200 calorie a day goal. After the first month she is down nearly 8 lbs. After another month, 7 lbs. are lost.</p> 
+
+            <p>Once she hits her goal she only needs to maintain her weight. This means she doesn’t need a surplus or deficit, and she eats only the amount her body burns every day.</p>
+
+            <p>So there you have it. Calorie counting is a necessary evil. But with the help of technology it’s getting easier every day. I would encourage you all to find a system that works best for you. I entrust myFitnessPal App for all of my calorie counting needs and it has served me well. So go out there and start counting those calories if you haven’t already.</p>
+            <p class="text-left byline">By J. Slaughter 3.13.17</p>
+          </div>
+        </div>
+      </article>
+      <article>
+        <div class="row">
+          <div class="col-md-6 text-center col-md-offset-3 main-article well">
+          <!--<button class="btn-article" data-toggle="modal" data-target="#article01">
+            <h3>What is Your Why</h3>
+            <p>Finding Your Purpose</p>
+          </button>-->
             <h3>The Purge</h3>
             <h4>"Just Remember all the good the purge does"</h4>
-            <p>Hope you found your why and you are now ready to move forward. Well its time to Purge!!! All that junk in your house must go. The honey buns in your night stand, TOSS THEM! The starburst jar on your desk, GIVE IT AWAY. I am so serious about this. Not having the trash available in your house to eat is one of the single most effective things you can do to keep yourself from eating it. On a cold winters morning I will surely eat the apple in my house rather than run to the store for high carb and high fat snacks. 
-            Admittedly single people have the adventage here. Having a family that isn’t on a diet and them needing to hold on to their snacks is a difficult thing to cope with. I would then ask you to ask them to be supportive and perhaps they make some sacrifices to support you in your journey. If that doesn’t work ask them to hide their crap. 
-            For those of you that are in this situation you are going to have to have a bit more self control than your single counter parts. So again it’s a matter of getting your house mates on board with a plan on how to keep you away from their food or minimizing the amount of “bad” food coming into the house.
-            </p>
+            <p>Hope you found your why and you are now ready to move forward. Well its time to Purge!!! All that junk in your house must go. The honey buns in your night stand, TOSS THEM! The starburst jar on your desk, GIVE IT AWAY. I am so serious about this. Not having the trash available in your house to eat is one of the single most effective things you can do to keep yourself from eating it. On a cold winters morning I will surely eat the apple in my house rather than run to the store for high carb and high fat snacks.</p>
+            <p>Admittedly, single people have the adventage here. Having a family that isn’t on a diet and them needing to hold on to their snacks is a difficult thing to cope with. I would then ask you to ask them to be supportive and perhaps they make some sacrifices to support you in your journey. If that doesn’t work ask them to hide their crap.</p>
+            <p>For those of you that are in this situation you are going to have to have a bit more self control than your single counter parts. So again it’s a matter of getting your house mates on board with a plan on how to keep you away from their food or minimizing the amount of “bad” food coming into the house.</p>
             <p class="text-left byline">By J. Slaughter 3.10.17</p>
           </div>
         </div>
@@ -62,9 +86,9 @@
                     <h4 class="modal-article" id="article01-modal">What is Your Why</h4>
                 </div>
                 <div class="modal-body text-center">
-                  <p>When first starting out on your fitness journey I would encourage you to understand what your Why is. Why do you want to do this? Do you simply want to look hot? Do you want to run a marathon? Do you want to get revenge on a ex who insulted you? The reason why this question is important is because if you are doing it for the wrong reasons the deck is already stacked against you and you will most likely fail. Sorry but that is just a fact. 
-                  So what are the right reasons and what are the wrong reasons?  I suppose the best way to summarize that is whether the goals are intrinsic or extrinsic. Are they coming from within or without. People have a much better time achieving a goal when its intrinsic. When they want to do something simply because they want to do something without external influence. Wanting to look hot is not a bad thing when you just want to look hot. You look in the mirror and get a smug satisfaction at the image that is looking back at you. However wanting to make your ex drool on the other hand is not. Say that person moves away, or gets hit by a bus then your initial motivation is now gone. Next thing you know you wake up in a pile of pizza boxes not sure how you got there.  
-                  So your homework would be figure out you why. Journal about it and do some soul searching and then when you feel like you are ready, come back here to understand how to get started. Go roam free and find your why!</p>
+                  <p>When first starting out on your fitness journey I would encourage you to understand what your Why is. Why do you want to do this? Do you simply want to look hot? Do you want to run a marathon? Do you want to get revenge on a ex who insulted you? The reason why this question is important is because if you are doing it for the wrong reasons the deck is already stacked against you and you will most likely fail. Sorry but that is just a fact.</p>
+                  <p>So what are the right reasons and what are the wrong reasons?  I suppose the best way to summarize that is whether the goals are intrinsic or extrinsic. Are they coming from within or without. People have a much better time achieving a goal when its intrinsic. When they want to do something simply because they want to do something without external influence. Wanting to look hot is not a bad thing when you just want to look hot. You look in the mirror and get a smug satisfaction at the image that is looking back at you. However wanting to make your ex drool on the other hand is not. Say that person moves away, or gets hit by a bus then your initial motivation is now gone. Next thing you know you wake up in a pile of pizza boxes not sure how you got there.</p>
+                  <p>So your homework would be figure out you why. Journal about it and do some soul searching and then when you feel like you are ready, come back here to understand how to get started. Go roam free and find your why!</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
