new journal entry

--- a/journal.html
+++ b/journal.html
@@ -45,11 +45,12 @@
             <h3>What is Your Why</h3>
             <p>Finding Your Purpose</p>
           </button>-->
-            <h3>COMING SOON</h3>
-            <h4></h4>
-            <p>
-            </p>
-            <p class="text-left byline"></p>
+            <h3>3.22.17</h3>
+            <h4>Off to a Strong Start</h4>
+            <p>So I’ve been hitting the diet and nutrition hard for the past 3 or so weeks and I am finally starting to see results. I’m about 121 lbs., down from 126. I am planning to continue to cut until next Thursday then start a 4-week bulk. I will continue to post stats and progress as it happens.</p>
+            <p>Just a quick note on what my diet is. I am currently consistently at a 500 calorie deficit. This puts me on track to lose a pound a week. That’s the most I can do without feeling starved. My BMR is low since I am a “small” person so I cannot afford a 1000-calorie deficit. I tried it and I wanted to eat the wallpaper off the walls. I wouldn’t be able to sustain it. The 500-calorie deficit feels more natural for me. I try to keep my macros at 40% carb, 40% protein and 20% fat. But if I give into a craving it’ll swing towards carbs and fat. So I try not to give in, but I’m human. If I do eat something I just cut something from the meal plan to maintain the 500-calorie deficit.</p>
+            <p>As for working out I am doing about an hour of resistance training and then low intensity cardio for a half hour. Since I am not trying to lose a lot of weight I am leery of high intensity cardio because as we all know, or you will learn, your body tends to burn off muscle before fat in such a state. Your body becomes catabolic which basically means it’s eating your muscle. Low intensity cardio burns a higher percentage of fat. There is no exact number but lets say high intensity cardio you could be burning 50% fat and 50% muscle, where as with low intensity cardio you would be burning about 80% fat. </p>
+            <p>That’s it for this week. I will post an update and hopefully a pic next week if I can find some good lighting. I would like to get a good starting point before the bulk begins.</p>
           </div>
         </div>
       </article>
