--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </button>-->
             <h3>The 2000 Calorie Myth</h3>
             <h4>A Clear Case of Sabotage</h4>
-            <p>So, perhaps I am being a tad bit dramatic with the whole sabotage reference. However, the 2000-calorie guideline that you see plastered on nearly every NFP (Nutrition Facts Panel) is just plain wrong for the majority of people. The caloric need of a person is terribly specific to a person’s gender, age, height, activity level, and BMI (body mass index). I think it’s a little irresponsible that this number is still included on NFPs given how wrong it is. I personally think there should be no reference to a caloric intake rather than listing one very specific target. I can go on for days, but at the risk of losing your attention lets get right to it. Here I will go over where the number came from, why it’s inaccurate, and what number a person should actually being using.</p>
+            <p>So, perhaps I am being a tad bit dramatic with the whole sabotage reference. However, the 2000-calorie guideline that you see plastered on nearly every NFP (Nutrition Facts Panel) is just plain wrong for the majority of people. The caloric need of a person is terribly specific to a person’s gender, age, height, activity level, and BMI (body mass index). I think it’s a little irresponsible that this number is still included on NFPs given how wrong it is. I personally think there should be no reference to a caloric intake rather than listing one very specific target. I can go on for days, but at the risk of losing your attention lets get right to it. Here I will go over where the number came from, why it’s inaccurate, and what number a person should actually be using.</p>
             <p>So, where did this mystery number come from? Simple. It came from studies or calculations done to fit that of a 185lb 6 ft. white guy. In a conference I recently learned that most dosing for medications are calculated based on the needs of a very specific model. What model is this? A white man of a specific height and weight. Therefore, the medicines you are taking can be too much or too little depending on how you compare to this initial model.  The same holds true for the 2000-calorie diet.</p>
             <p>The best way to show this is with another example. A 120 lb. sedentary person burns about 1200 calories a day just being alive. The 1200-calorie threshold is what we call that person’s BMR or Base Metabolic Rate. Wikipedia defines BMR as “the rate at which your body uses energy when you are resting in order to keep vital functions going such as breathing”. If this sedentary person is eating 2000 calories a day they will be creating a caloric surplus of about 800 calories daily, or 5600 calories weekly. In other words, they will be gaining about 1.6 lbs. a week. </p>
             <p>So how do you know how many calories you are burning in a day? Well the best way to start is to find our what your BMR is. There are a myriad of calculators and formulas on the web that can help assist you with that. This equation I am listing here is the Mifflin-St. Jeor equation and is considered to be the standard when it comes to BMR formulas as of now.</p>
@@ -59,7 +59,7 @@
             </button>
             <p>Once you have your starting BMR there is one very important thing to keep in mind. This is not a one-time exercise! If you are dramatically gaining or losing weight you will have to recalculate this as your weight changes. For example, a person who started out at 180 lbs. might have a BMR of 1800 calories at that time. Once that person is down to 120 lbs. their BMR has dropped by 600 calories because the body is smaller and more efficient. If you do not adjust your eating habits to accommodate you wont be losing weight or maintaining it. Just gaining it back. I suggest you recalculate with every 5% change in body weight.</p>
             <p>I hoped this article has made you suspicious of the “based on a 2000 calorie diet” verbiage on the back of nearly every package in this country. Pay it no mind because 99 out of 100 times it means nothing to you, the individual.</p>
-            <p class="text-left byline">By J. Slaughter 3.14.17</p>
+            <p class="text-left byline">J. Slaughter 3.14.17</p>
           </div>
         </div>
       </article>
@@ -84,7 +84,7 @@
             <p>Once she hits her goal she only needs to maintain her weight. This means she doesn’t need a surplus or deficit, and she eats only the amount her body burns every day.</p>
 
             <p>So there you have it. Calorie counting is a necessary evil. But with the help of technology it’s getting easier every day. I would encourage you all to find a system that works best for you. I entrust myFitnessPal App for all of my calorie counting needs and it has served me well. So go out there and start counting those calories if you haven’t already.</p>
-            <p class="text-left byline">By J. Slaughter 3.13.17</p>
+            <p class="text-left byline">J. Slaughter 3.13.17</p>
           </div>
         </div>
       </article>
@@ -100,7 +100,7 @@
             <p>Hope you found your why and you are now ready to move forward. Well its time to Purge!!! All that junk in your house must go. The honey buns in your night stand, TOSS THEM! The starburst jar on your desk, GIVE IT AWAY. I am so serious about this. Not having the trash available in your house to eat is one of the single most effective things you can do to keep yourself from eating it. On a cold winters morning I will surely eat the apple in my house rather than run to the store for high carb and high fat snacks.</p>
             <p>Admittedly, single people have the adventage here. Having a family that isn’t on a diet and them needing to hold on to their snacks is a difficult thing to cope with. I would then ask you to ask them to be supportive and perhaps they make some sacrifices to support you in your journey. If that doesn’t work ask them to hide their crap.</p>
             <p>For those of you that are in this situation you are going to have to have a bit more self control than your single counter parts. So again it’s a matter of getting your house mates on board with a plan on how to keep you away from their food or minimizing the amount of “bad” food coming into the house.</p>
-            <p class="text-left byline">By J. Slaughter 3.10.17</p>
+            <p class="text-left byline">J. Slaughter 3.10.17</p>
           </div>
         </div>
       </article>
@@ -130,7 +130,7 @@
             So what are the right reasons and what are the wrong reasons?  I suppose the best way to summarize that is whether the goals are intrinsic or extrinsic. Are they coming from within or without. People have a much better time achieving a goal when its intrinsic. When they want to do something simply because they want to do something without external influence. Wanting to look hot is not a bad thing when you just want to look hot. You look in the mirror and get a smug satisfaction at the image that is looking back at you. However wanting to make your ex drool on the other hand is not. Say that person moves away, or gets hit by a bus then your initial motivation is now gone. Next thing you know you wake up in a pile of pizza boxes not sure how you got there.  
             So your homework would be figure out you why. Journal about it and do some soul searching and then when you feel like you are ready, come back here to understand how to get started. Go roam free and find your why!
             </p>
-            <p class="text-left byline">By J. Slaughter 3.10.17</p>
+            <p class="text-left byline">J. Slaughter 3.10.17</p>
           </div>
         </div>
       </article>
